# ZohoAnalytics

./: .gitignore  README.md  env_example.txt  filter_tables.py  find_learning_tables.py  search_specific_tables.py  test_table_schema.py  test_zoho_sql.py  zoho_analytics_auth.py  zoho_analytics_queries_extended.sql  zoho_detailed_schema.xlsx  zoho_filtered_schema.xlsx  zoho_learning_analysis_report.xlsx  zoho_learning_field_reference.xlsx  zoho_learning_tables_fields.xlsx  zoho_learning_tables_sql.sql  zoho_schema.json  zoho_schema_detailed.py  zoho_schema_extractor.py  zoho_schema_from_data.py  zoho_simple_task_queries.sql  zoho_sql_generator.py  zoho_sql_instructions.md  zoho_table_extractor.py
05_ドキュメント/: CLAUDE.md  VERSANT_レポート_使用説明.md  conversation_log_20250727.md
07_スキーマ情報/: zoho_analytics_schema_20250726_170742.json  zoho_analytics_schema_readable_20250726_170742.txt  zoho_crm_schema.json  zoho_crm_schema.xlsx  zoho_field_reference.xlsx  zoho_filtered_schema.json  zoho_schema.xlsx  zoho_table_list.xlsx  zoho_tokens.json
10_商品マスタ更新/: check_products_module.py  comprehensive_books_analysis.py  debug_layouts_and_structure.py  hierarchy_summary.py  practical_solutions.py  test_products_update.py  update_errors_20250810_151845.json  update_products_batch.py  update_products_fixed.py  update_products_master.py
11_請求書チェック/: README.md  README_ANALYSIS.md  analyze_crm_books_relations.py  analyze_deal_hierarchy.py  config.json  (+41 more)
mcp_zoho_crm/: .env.example  README.md  index.js  package.json  pyproject.toml  test_auto_auth.py  test_server.py  zoho_crm_mcp_server.py
(+182 files in other folders)
