[project]
name = "zoho-crm-mcp"
version = "1.0.0"
description = "Zoho CRM MCP Server for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zoho-crm-mcp = "zoho_crm_mcp_server:main"